add StrUtil.join to replace java8's builtin String.join, which does not support java1.7